--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,9 +1,3 @@
-/* Variables */
-$vin-blue: #5bb7db;
-$vin-green: #60b044;
-$vin-red: #ff0000;
-
-/* Styles */
 body {
   font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
   line-height: 1.4em;
@@ -22,10 +16,10 @@ td {
 }
 
 h2 {
-	color: $vin-blue;
+	color: #5bb7db;
 }
 
-.savings { color: $vin-green; }
-.loss { color: $vin-red; }
+.savings { color: #60b044; }
+.loss { color: #ff0000; }
 input.small { width: 46px; }
 td.fuel-savings-label { width: 175px; }
