--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,9 +1,9 @@
 body {
-  font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font: 14px "Helvetica Neue", Helvetica, Arial, sans-serif;
   line-height: 1.4em;
   color: #4d4d4d;
   min-width: 230px;
-  max-width: 550px;
+  max-width: 650px;
   margin: 0 auto;
   -webkit-font-smoothing: antialiased;
   -moz-font-smoothing: antialiased;
@@ -12,14 +12,22 @@ body {
 }
 
 td {
-	padding: 12px;
+  padding: 12px;
 }
 
 h2 {
-	color: #5bb7db;
+  color: #5bb7db;
 }
 
-.savings { color: #60b044; }
-.loss { color: #ff0000; }
-input.small { width: 46px; }
-td.fuel-savings-label { width: 175px; }
+.savings {
+  color: #60b044;
+}
+.loss {
+  color: #ff0000;
+}
+input.small {
+  width: 46px;
+}
+td.fuel-savings-label {
+  width: 175px;
+}
